# hadlock

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Xresources  build.sh  polyconf  run.sh  xinitrc
.github/workflows/: release.yml  rust.yml  test.yml
config/: hadlock.json  hadlock.json.material  hadlock.json.synthwave  hadlock.ron  hadlok.json
resources/: installation-and-config.md  layout-examples.md  planned-features.md  progress.md  testing.md
scripts/: build.sh  compton.conf  polyconf  xinitrc
src/: hdl_dispatcher.rs  hdl_reactor.rs  main.rs  main_reducer.rs  reducer.rs  runner.rs  state.rs  windowmanager.rs  wm.rs  xlibwrapper.rs
src/callbacks/: button_press.rs  button_release.rs  client_message_request.rs  configure_request.rs  destroy_window.rs  enter_notify.rs  expose.rs  key_press.rs  key_release.rs  leave_notify.rs  map_request.rs  mod.rs  motion_notify.rs  property_notify.rs  unmap_notify.rs
src/config/: config.rs  config_data.rs  config_model.rs  loader.rs  mod.rs
src/layout/: column_master.rs  floating.rs  master_tiling.rs  mod.rs  tiled.rs
src/models/: dockarea.rs  internal_action.rs  mod.rs  monitor.rs  rect.rs  screen.rs  snapping_region.rs  window.rs  window_type.rs  windowwrapper.rs  workspace.rs
src/reducers/: button_press.rs  button_release.rs  client_message_request.rs  configure_request.rs  destroy.rs  destroy_notify.rs  enter_notify.rs  focus.rs  key_press.rs  leave_notify.rs  map_request.rs  mod.callbacks  mod.rs  motion_notify.rs  property_notify.rs  unknown.rs  unmap_notify.rs  update_layout.rs
(+12 files in other folders)
