[package]
name = "hadlock"
version = "0.1.0"
authors = ["PierreLeidbring <pierre.leidbring@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.58"
simplelog = "0.5.3"

x11 = {version = "2.18.1", features = ["xlib"]}
