[package]
name = "hadlock"
version = "0.1.0"
authors = ["PierreLeidbring <pierre.leidbring@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
libc = "0.2.58"
env_logger = "0.7.0"
lazy_static = "1.3.0"
bitflags = "1.1.0"
x11 = {version = "*", features = ["xlib", "xinerama"]}
x11-dl = "2.18.3"
nix = "0.15"
fern = "0.4.1"
chrono = "0.4.10"
log = "0.3"
reducer = "1.3.0"
derivative = "1.0.3"
